src/styles/globals.scss
@use "@/styles/vars" as vars;

:root {
  --fg: #D3C6AA;
  --red: #E67E80;
  --orange: #E69875;
  --yellow: #DBBC7F;
  --green: #A7C080;
  --blue: #7FBBB3;
  --aqua: #83C092;
  --purple: #D699B6;

  --bg-dim: #1E2326;
  --bg0: #272E33;
  --bg1: #2E383C;
  --bg2: #374145;
  --bg3: #414B50;
  --bg4: #495156;
  --bg5: #4F5B58;
  --bg-red: #4C3743;
  --bg-visual: #493B40;
  --bg-yellow: #45443C;
  --bg-green: #3C4841;
  --bg-blue: #384B55;
  --bg-purple: #463F48;

  --grey0: #7A8478;
  --grey1: #859289;
  --grey2: #9DA9A0;
}

html {
  min-height: 100dvh;
  min-width: 100dvw;
  margin: 0;
}

body {
  margin: 0;
  min-height: 100dvh;
  background-color: var(--bg0);
  color: var(--fg);
  font-family: var(--font-main);
}

p {
  font-size: vars.$fsize-main;
}

p, h1, h2, h3, h4, h5, h6 {
  margin: 0;
  font-family: var(--font-main);
}

h1 {
  font-size: vars.$fsize-heading;
}

h2 {
  font-weight: 800;
  font-size: vars.$fsize-large;
}

h3 {
  font-weight: 700;
  font-size: vars.$fsize-med-large;
}

h4 {
  font-weight: 600;
  font-size: vars.$fsize-med;
}

h5 {
  font-weight: 500;
  font-size: vars.$fsize-med-small;
}

.tabler-icon {
  width: 1em;
  height: 1em;
}

input, button, .linkButton {
  all: unset;
  color: var(--fg);
  font-family: var(--font-main);
  font-size: vars.$fsize-main;

  background-color: var(--bg-dim);
  padding: vars.$padding-main;
}

button, .linkButton {
  cursor: pointer;
  font-family: var(--font-mono);

  &:hover {
    background-color: var(--bg1);
  }

  @include vars.transition-main;
}

.linkButton:visited {
  color: var(--fg);
}

input {
  cursor: text;
}

a {
  color: var(--blue);

  &:visited {
    color: var(--purple)
  }
}

.siteTitle {
  font-weight: 1000;
  font-variation-settings: "wdth" 140, "XTRA" 520, "slnt" -8;
  color: var(--green);
}

